# AutoSlasher

./: Cargo.toml  README.md
src/: camera.rs  end_game.rs  game_over.rs  game_state.rs  main.rs  physics.rs  utils.rs
src/enemies/: enemies.rs  health.rs  mod.rs  movement.rs
src/map/: collision.rs  map.rs  mod.rs
src/player/: attacks.rs  health.rs  mod.rs  movement.rs  player.rs
src/ui/: hud.rs  menu.rs  mod.rs  score.rs  ui.rs
