[package]
name = "auto_slasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
petitset = "0.1.0"
strum = {version = "0.23", features = ["derive"]}
leafwing-input-manager = "0.1.2"
rand = "0.8.4"
heron = { version = "1.0.1", features = ["3d"] }

#leafwing-input-manager= { git = "https://github.com/Leafwing-Studios/leafwing-input-manager" } 
#strum = "0.23"
#strum_macros = "0.23"

#plugins not ready for 0.6
#bevy_config_cam= { git = "https://github.com/BlackPhlox/bevy_config_cam", branch = "0.6" } 

[workspace]
resolver = "2"